--- a/views/index.ejs
+++ b/views/index.ejs
@@ -140,6 +140,7 @@
       <tbody id="data-body">
       </tbody>
     </table>
+    <button class="btn btn-primary"><a href="" class="text-decoration-none text-white">Add</a></button>
   </div>
 
   <script type="text/javascript">
