--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
   </title>
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/6ea2cb925f.js" crossorigin="anonymous"></script>
   <style>
     .sort-icon {
@@ -140,69 +140,11 @@
       <tbody id="data-body">
       </tbody>
     </table>
+    <br>
+    <div class="pagination" id="pagination">
+    </div>
     <button class="btn btn-primary"><a href="" class="text-decoration-none text-white">Add</a></button>
   </div>
-
-  <script type="text/javascript">
-    async function readData() {
-      try {
-        const response = await fetch("http://localhost:3100/data");
-        if (response.ok) {
-          const data = await response.json();
-          // Display data
-          displayData(data)
-
-        } else {
-          throw new Error("Error: " + response.status);
-        }
-      } catch (error) {
-        console.log(error)
-      }
-    }
-    function displayData(data) {
-      let html = "";
-      data.forEach((item,index) => {
-        html += `
-        <tr>
-          <td>${item.id}</td>
-          <td>${item.string}</td>
-          <td>${item.integer}</td>
-          <td>${item.float}</td>
-          <td>${item.date}</td>
-          <td>${item.boolean}</td>
-          <td>
-              <a href="" class="btn btn-success btn-sm">Edit</a>
-              <button class="btn btn-danger btn-sm" onclick="deleteData('${item.integer}')">Hapus</button>
-          </td>
-        </tr>`
-      });
-      document.getElementById('data-body').innerHTML = html;
-    }
-
-    async function deleteData(integer) {
-      try {
-        const response = await fetch(`http://localhost:3100/data/${integer}`, {
-          method: 'DELETE',
-          headers: {
-            'Content-Type': 'application/json'
-          },
-          body: JSON.stringify({ integer })
-        });
-
-        if (response.ok) {
-          const result = await response.json();
-          // Handle the created data
-          console.log("Success:", result);
-          await readData()
-        } else {
-          throw new Error('Error: ' + response.status);
-        }
-      } catch (error) {
-        console.log(error);
-      }
-    }
-    readData()
-  </script>
 </body>
 
 </html>
