Search and pagination on Backend Done

--- a/views/indexVanilla.ejs
+++ b/views/indexVanilla.ejs
@@ -171,7 +171,7 @@
         }
         function displayData(data) {
             let html = "";
-            data.forEach((item, index) => {
+            data.data.forEach((item, index) => {
                 html += `
         <tr>
             <td>${item.number}</td>
