--- a/views/indexVanilla.ejs
+++ b/views/indexVanilla.ejs
@@ -26,9 +26,74 @@
 <body>
     <div class="container">
         <h1>BREADS (Browse, Read, Update, Delete, Sort)</h1>
-        <h4>Add Data</h4>
-        <form id="create-form">
+        <h4>Fillters</h4>
+        <form id="filter-form">
             <input type="hidden" name="page" value="1">
+            <div class="row mb-3">
+                <label for="inputId" class="col-sm-4 col-form-label">
+                    <input type="checkbox" name="checkId" id="checkId">
+                    ID
+                </label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" id="id" name="id">
+                </div>
+            </div>
+            <div class="row mb-3">
+                <label for="inputStr" class="col-sm-4 col-form-label">
+                    <input type="checkbox" name="checkStr" id="checkStr">
+                    String
+                </label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" id="string" name="string">
+                </div>
+            </div>
+            <div class="row mb-3">
+                <label for="inputInt" class="col-sm-4 col-form-label">
+                    <input type="checkbox" name="checkInt" id="checkInt">
+                    Integer
+                </label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" id="integer" name="integer">
+                </div>
+            </div>
+            <div class="row mb-3">
+                <label for="inputFloat" class="col-sm-4 col-form-label">
+                    <input type="checkbox" name="checkFloat" id="checkFloat">
+                    Float
+                </label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" id="float" name="float">
+                </div>
+            </div>
+            <div class="row mb-3">
+                <label for="inputDate" class="col-sm-4 col-form-label">
+                    <input type="checkbox" name="checkDate" id="checkDate">
+                    Date
+                </label>
+                <div class="col-sm-4">
+                    <input type="date" class="form-control" id="startDate" name="startDate">
+                    to
+                    <input type="date" class="form-control" id="endDate" name="endDate">
+                </div>
+            </div>
+            <div class="row mb-3">
+                <label for="inputBol" class="col-sm-4 col-form-label">
+                    <input type="checkbox" name="checkBol" id="checkBol">
+                    Boolean
+                </label>
+                <div class="col-sm-8">
+                    <select name="boolean" id="boolean" class="form-select">
+                        <option>Choose the boolean</option>
+                        <option value="true">True</option>
+                        <option value="false">False</option>
+                    </select>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Search</button>
+            <a href="/" class="btn btn-secondary">Back</a>
+        </form>
+        <br>
+        <form id="create-form" style="display: none;">
             <div class="row mb-3">
                 <label for="inputId" class="col-sm-4 col-form-label">
                     ID
@@ -83,7 +148,7 @@
             </div>
             <!-- <button class="btn btn-primary">Search</button> -->
             <button type="submit" class="btn btn-primary">Add</button>
-            <a href="/" class="btn btn-secondary">Back</a>
+            <a onclick="closeAdd()" class="btn btn-secondary">Close</a>
         </form>
     </div>
     <br>
@@ -133,9 +198,13 @@
             <tbody id="data-body">
             </tbody>
         </table>
+        <nav aria-label="Page navigation example">
+            <ul class="pagination" id="pagination">
+
+            </ul>
+        </nav>
+        <button type="submit" onclick="showAdd()" class="btn btn-primary">Add</button>
         <br>
-        <div class="pagination" id="pagination">
-        </div>
     </div>
 
     <script type="text/javascript">
@@ -161,6 +230,7 @@
                     const data = await response.json();
                     // Display data
                     displayData(data)
+                    pagination(data)
 
                 } else {
                     throw new Error("Error: " + response.status);
@@ -189,6 +259,24 @@
             document.getElementById('data-body').innerHTML = html;
         }
 
+        function pagination(data) {
+            let html = "";
+            html += `
+                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            `
+            document.getElementById('pagination').innerHTML = html;
+        }
+
+        function showAdd() {
+            document.getElementById("create-form").style.display = 'block'
+        }
+        function closeAdd() {
+            document.getElementById("create-form").style.display = 'none'
+        }
         async function createData(number, string, integer, float, date, boolean) {
             try {
 
@@ -252,12 +340,12 @@
                     alert('Please,Insert the data')
                     return
                 }
-                const response = await fetch(`http://localhost:3100/data/${id}`,{
-                    method:'PUT',
-                    headers:{
-                        'Content-Type' : 'application/json'
+                const response = await fetch(`http://localhost:3100/data/${id}`, {
+                    method: 'PUT',
+                    headers: {
+                        'Content-Type': 'application/json'
                     },
-                    body:JSON.stringify(data)
+                    body: JSON.stringify(data)
                 })
                 if (response.ok) {
                     const result = await response.json();
