--- a/views/backup.html
+++ b/views/backup.html
@@ -35,7 +35,7 @@
                     ID
                 </label>
                 <div class="col-sm-8">
-                    <input type="text" class="form-control" id="idFilter" name="id">
+                    <input type="text" class="form-control" id="id" name="id">
                 </div>
             </div>
             <div class="row mb-3">
@@ -44,7 +44,7 @@
                     String
                 </label>
                 <div class="col-sm-8">
-                    <input type="text" class="form-control" id="strFilter" name="string">
+                    <input type="text" class="form-control" id="string" name="string">
                 </div>
             </div>
             <div class="row mb-3">
@@ -53,7 +53,7 @@
                     Integer
                 </label>
                 <div class="col-sm-8">
-                    <input type="text" class="form-control" id="intFilter" name="integer">
+                    <input type="text" class="form-control" id="integer" name="integer">
                 </div>
             </div>
             <div class="row mb-3">
@@ -62,7 +62,7 @@
                     Float
                 </label>
                 <div class="col-sm-8">
-                    <input type="text" class="form-control" id="floatFilter" name="float">
+                    <input type="text" class="form-control" id="float" name="float">
                 </div>
             </div>
             <div class="row mb-3">
@@ -71,9 +71,9 @@
                     Date
                 </label>
                 <div class="col-sm-4">
-                    <input type="date" class="form-control" id="startDateFilter" name="startDate">
+                    <input type="date" class="form-control" id="startDate" name="startDate">
                     to
-                    <input type="date" class="form-control" id="endDateFilter" name="endDate">
+                    <input type="date" class="form-control" id="endDate" name="endDate">
                 </div>
             </div>
             <div class="row mb-3">
@@ -82,7 +82,7 @@
                     Boolean
                 </label>
                 <div class="col-sm-8">
-                    <select name="boolean" id="booleanFilter" class="form-select">
+                    <select name="boolean" id="boolean" class="form-select">
                         <option>Choose the boolean</option>
                         <option value="true">True</option>
                         <option value="false">False</option>
@@ -197,13 +197,13 @@
             const checkDate = document.getElementById('checkDate').checked;
             const checkBol = document.getElementById('checkBol').checked;
 
-            const id = document.getElementById('idFilter').value;
-            const string = document.getElementById('strFilter').value;
-            const integer = document.getElementById('intFilter').value;
-            const float = document.getElementById('floatFilter').value;
-            const startDate = document.getElementById('startDateFilter').value;
-            const endDate = document.getElementById('endDateFilter').value;
-            const boolean = document.getElementById('booleanFilter').value;
+            const id = document.getElementById('id').value;
+            const string = document.getElementById('string').value;
+            const integer = document.getElementById('integer').value;
+            const float = document.getElementById('float').value;
+            const startDate = document.getElementById('startDate').value;
+            const endDate = document.getElementById('endDate').value;
+            const boolean = document.getElementById('boolean').value;
 
             const filterParams = {
                 page: 1,
